--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Flask==2.2.2
-beautifulsoup4==4.10.0
-Flask-Migrate==3.1.0
-requests==2.28.1
+beautifulsoup4==4.12.2
+Pillow==10.2.0
+requests==2.31.0
+urllib3==2.0.7
+Flask-Cors==3.0.10
